# desk-commander

./: .gitignore  README.md  client_launch.sh  pyproject.toml  server_launch.sh  setup.cfg
client/electron/: gui.html  gui.js  guiExample.css  guiExample.html  guiExample.js  main.js
electron/: SETUP.md  package-lock.json
electron-react-app/: config-overrides.js  electron.js  package-lock.json  package.json
electron-react-app/public/: electron.js
electron-react-app/src/: App.css  App.js  index.js
src/deskcommander/: launcher.py  server.py
src/deskcommander/connectors/: hubspace.py  serial.py
