[project]
name = "desk-commander"
version = "0.0.1"
authors = [
  { name="Shawn McNaughton", email="shawngmc@gmail.com" },
]
description = "RPi-based desktop control touchscreen"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = [
  'customtkinter >= 5.2.2'
]

[project.urls]
"Homepage" = "https://github.com/shawngmc/desk-commander"
"Bug Tracker" = "https://github.com/shawngmc/desk-commander/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
deskcommander = "deskcommander.launcher:launch"